Fix z-index on beta-logo

--- a/src/assets/styling/search-intro.scss
+++ b/src/assets/styling/search-intro.scss
@@ -42,6 +42,7 @@
   @media(min-width: $breakpointLg) {
     position: static;
     order: 2;
+    z-index: auto;
   }
 }
 
